<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cyorg.uiic.dwellingpremium.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_layout_sum_insured"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_edit_sum_insured">

        <EditText
            android:id="@+id/edit_sum_insured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_layout_years_insured"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_edit_years_insured">

        <EditText
            android:id="@+id/edit_years_insured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_premium_scheme"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:entries="@array/scheme_array"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/main_cal_premium_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/main_calculate_premium_button"/>

</LinearLayout>
